# metro-model

./: .gitignore  README.md  phi3-small.py  pyproject.toml
datasets/: test.txt
src/metro_model/: __init__.py
