[project]
name = "metro-model"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Ryo Hirayama", email = "ryo12redstone@gmail.com" }
]
dependencies = [
    "transformers>=4.41.1",
    "datasets>=2.19.1",
    "evaluate>=0.4.2",
    "accelerate>=0.30.1",
    "torch>=2.3.0",
    "tiktoken>=0.7.0",
    "einops>=0.8.0",
    "triton>=2.3.1",
    "setuptools>=70.0.0",
    "pytest>=8.2.1",
    "flash-attention>=1.0.0",
    "bitsandbytes>=0.43.1",
    "optimum>=1.20.0",
    "packaging>=24.0",
    "wheel>=0.43.0",
    "pip>=24.0",
    "uv>=0.2.5",
    "onnxruntime-gpu>=1.18.0",
    "llama>=0.1.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling", "packaging"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/metro_model"]
